--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mo-support",
-  "version": "1.0.3",
+  "version": "1.1.0",
   "description": "Mo WordPress-Support Plugin",
   "engines": {
     "node": "10.0.0",
@@ -12,13 +12,15 @@
     "build-js": "NODE_ENV=production gulp js --require @babel/register"
   },
   "devDependencies": {
-    "@babel/core": "^7.7.7",
-    "@babel/register": "^7.7.7",
-    "ajv": "^6.10.2",
+    "@babel/core": "^7.8.3",
+    "@babel/register": "^7.8.3",
+    "ajv": "^6.11.0",
     "cssnano": "^4.1.10",
     "cssnano-preset-advanced": "^4.0.7",
     "del": "^5.1.0",
     "gulp": "^4.0.2",
+    "gulp-changed": "^4.0.2",
+    "gulp-imagemin": "^7.0.0",
     "gulp-notify": "^3.2.0",
     "gulp-postcss": "^8.0.0",
     "gulp-sass": "^4.0.2",
