Update plugin name

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
   "name": "mo/support",
-  "description": "MONTAGMORGENS Support Plugin",
+  "description": "MONTAGMORGENS WordPress Support Plugin",
   "license": "GPL-2.0-or-later",
   "authors": [
     {
