Kill Yoast notifications

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mo-support",
-  "version": "1.4.0",
+  "version": "1.4.1",
   "description": "MONTAGMORGENS WordPress Support Plugin",
   "engines": {
     "node": "10.0.0",
@@ -17,17 +17,19 @@
     "ajv": "^6.12.5",
     "cssnano": "^4.1.10",
     "cssnano-preset-advanced": "^4.0.7",
-    "del": "^5.1.0",
+    "del": "^6.0.0",
     "gulp": "^4.0.2",
     "gulp-changed": "^4.0.2",
     "gulp-imagemin": "^7.1.0",
     "gulp-notify": "^3.2.0",
-    "gulp-postcss": "^8.0.0",
+    "gulp-postcss": "^9.0.0",
     "gulp-sass": "^4.1.0",
     "gulp-touch-fd": "^2.0.0",
     "gulp-watch": "^5.0.0",
+    "is-obj": "^2.0.0",
     "merge": "^1.2.1",
     "merge-stream": "^2.0.0",
+    "postcss": "^8.1.1",
     "require-dir": "^1.2.0",
     "run-sequence": "^2.2.1"
   },
