--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "1.4.1",
   "description": "MONTAGMORGENS WordPress Support Plugin",
   "engines": {
-    "node": "10.0.0",
-    "npm": "6.0.0"
+    "node": "^14.0.0",
+    "npm": "^7.0.0"
   },
   "scripts": {
     "dev": "NODE_ENV=development gulp --require @babel/register",
@@ -15,19 +15,19 @@
     "@babel/core": "^7.12.10",
     "@babel/register": "^7.12.10",
     "ajv": "^6.12.6",
-    "cssnano": "^4.1.10",
-    "cssnano-preset-advanced": "^4.0.7",
+    "cssnano": "^5.0.2",
+    "cssnano-preset-advanced": "^5.0.1",
     "del": "^6.0.0",
     "gulp": "^4.0.2",
     "gulp-changed": "^4.0.2",
     "gulp-imagemin": "^7.1.0",
-    "gulp-notify": "^3.2.0",
+    "gulp-notify": "^4.0.0",
     "gulp-postcss": "^9.0.0",
     "gulp-sass": "^4.1.0",
     "gulp-touch-fd": "^2.0.0",
     "gulp-watch": "^5.0.0",
-    "is-obj": "^2.0.0",
-    "merge": "^1.2.1",
+    "is-obj": "^3.0.0",
+    "merge": "^2.1.1",
     "merge-stream": "^2.0.0",
     "postcss": "^8.2.1",
     "require-dir": "^1.2.0",
